# cpp_compile_warning

./: .editorconfig  CMakeLists.txt  DockerFile  README.md  compile_warning.py
.devcontainer/: devcontainer.json
src/: Waggregate-return.cpp  Walloc-zero.cpp  Walloca.cpp  Warith-conversion.cpp  Wbad-function-cast.c  Wcast-align.c  Wcast-align.cpp  Wcast-qual.cpp  Wconversion.cpp  Wdate-time.cpp  Wdouble-promotion.cpp  Wduplicated-branches.cpp  Wduplicated-cond.cpp  Wfloat-conversion.cpp  Wfloat-equal.cpp  Wformat-nonliteral.cpp  Wformat-security.cpp  Wformat-signedness.cpp  Wformat-y2k.cpp  Winit-self.cpp  Winline.cpp  Wjump-misses-init.c  Wlogical-op.cpp  Wpendatic.cpp
